# hse-nlp

./: Dockerfile  README.md  pyproject.toml
2023/homeworks/hw1/: ru_be.train.txt
2023/homeworks/hw2/: hw2.ipynb
2023/seminars/: utils.py  week5_seq2seq.ipynb  week8_quantization.ipynb
2023/seminars/.ipynb_checkpoints/: week7_peft-checkpoint.ipynb
2024/: Makefile  README.md
2024/week1_text_classification/: seminar1.ipynb
2024/week2_generation/homework/: hw1.ipynb
2024/week3_rnn_transformer/: README.md
2024/week5_modern_llms/: README.md
2024/week5_modern_llms/homework/: hw3_llama.md
2024/week6_peft/: seminar6.ipynb
2024/week7_size_reduction/: README.md  seminar7.ipynb
2024/week9_rag/: seminar9.ipynb
homeworks/: hw1_n_gram_generaiton.ipynb
homeworks/hw1/: balalayki.txt  embedding_models.py  hw1.ipynb  ru_be.test.txt  simlex911.csv  utils.py
homeworks/hw2/: hw2.ipynb
homeworks/hw3/: hw3.ipynb  tokenizer-arxiv.json
homeworks/hw4/: hw4.ipynb
lectures/: nlp_week12_diffusion.pptx
seminars/: week11_huggingface_interface.ipynb  week1_word_embeddings.ipynb  week2_text_regression.ipynb  week3_n-gram_lm.ipynb  week4_lstm_text_generation.ipynb  week6_bert_ft.ipynb  week7_peft.ipynb
week01_text_classification/: seminar1.ipynb
week02_generation/: seminar2.ipynb
week2_generation/homework/: hw1.ipynb
week3_rnn_transformer/: seminar3.ipynb
week4_bert_gpt/: README.md  seminar4.ipynb
week5_modern_llms/: seminar5.ipynb
week5_modern_llms/homework/: README.md
week7_size_reduction/homework/: hw4.ipynb
week9_rag/: seminar9.ipynb
(+9 files in other folders)
