[tool.poetry]
name = "hse-nlp-2024"
version = "1.0.0"
description = "HSE NLP 2024"
authors = ["Alexey Birshert <https://t.me/Birshert>", "Alexander Shabalin <https://t.me/amshabalin>", "Alexey Pankov <https://t.me/ceo_alignment>"]
license = "MIT License"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "pytorch_cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[tool.poetry.dependencies]
python = "3.10.x"
torch = "2.5.0+cu121"
transformers = "^4.46.0"
peft = "0.12.0"
matplotlib = "^3.9.2"
torchmetrics = "^1.5.1"
wandb = "^0.18.5"
datasets = "^3.0.2"
evaluate = "^0.4.3"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
